force-app/main/default/objects/Caseworker__c/Caseworker__c.object-meta.xml
<CustomObject>
    <label>Caseworker</label>
    <nameField>
        <displayFormat>Caseworker ID - {0000}</displayFormat>
        <label>Caseworker ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Caseworkers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>