force-app/main/default/objects/Caseworker__c/fields/Foster_Care_Application__c.field-meta.xml
<CustomField>
    <fullName>Foster_Care_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Foster Care Application</label>
    <referenceTo>Foster_Care_Application__c</referenceTo>
    <relationshipLabel>Caseworkers</relationshipLabel>
    <relationshipName>Caseworkers</relationshipName>
    <type>Lookup</type>
</CustomField>