force-app/main/default/objects/Caseworker__c/fields/Total_Applications_Managed__c.field-meta.xml
<CustomField>
    <fullName>Total_Applications_Managed__c</fullName>
    <label>Total Applications Managed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>